vots i watchs funcionals, pendent de deploy
