# config/routes.rb
@@ -62,11 +62,11 @@ Rails.application.routes.draw do
   #get '/auth/google_oauth2/callback', to: 'users#auth'
   root 'issues#index'
   get 'update_status' => "issues#update_status"
-  get 'watch_issue' => "issues#watch"
-  get 'unwatch_issue' => "issues#unwatch"
   get '/issues/:issue_id/comments/:id/attachment' => "comments#show_attachment"
   post '/issues/:issue_id/comments/:id/attachment' => "comments#create_attachment"
   
   post '/issues/:id/vote' => "issues#vote", as: :vote
+  post '/issues/:id/watch' => "issues#watch", as: :watch
+  
   
 end
